# metatrader_bot

./: .gitignore  .locales  Procfile  pyproject.toml  requirements.txt
metatrader_bot/: main.py  messages_re.py
tests/: test_metatrader_bot.py
